--- a/Build
+++ b/Build
@@ -50,6 +50,12 @@ Bulid_Categories(){
     rm -rf public_root/Categories/$Dir/index.html
     cp -r public/Categories/* public_root/Categories/$Dir/
     cp public_root/$Dir/index.html public_root/Categories/$Dir/index.html
+    for file in $(find public_root/$Dir -name '*html') then;
+    do 
+    # sed -i "" "s/\"\/page/\".\/page/g" $file
+    # sed -i "" "s/<a href=\"\/\">Previous<\/a>/<a href=\".\/\">Previous<\/a>/g" $file
+    echo $file
+    done
     rm -rf public
     rm -rf source/_posts
 }
@@ -81,6 +87,10 @@ mv source/_posts/MyCV.md.bak source/_posts/MyCV.md
 # mv public/tags
 rm -rf "public/Achive"
 rm -rf $(find public/ -name '*\ *')
+for file in $(find public/ -name '*\ *') then;
+do 
+rm -rf $file" "*
+done
 
 # Timeline
 python3 fetch.py News
